Update CORS to allow Vercel frontend domain